Bug 598223: Gracefully handle the failure of OOP plugins that negotiate Carbon NPAPI. r=cjones r=bsmedberg a=2.0-b7